 * [FILEUPLOAD-173] - Manifest for OSGi has invalid syntax
 * [FILEUPLOAD-183] - commons-io dependency does not get loaded by maven if only dependency to commons-fileupload is specified
 * [FILEUPLOAD-185] - http://commons.apache.org/fileupload/index.html is out of date
 * [FILEUPLOAD-186] - http://commons.apache.org/fileupload/index.html should not mention nightly builds
 * [FILEUPLOAD-189] - DiskFileItemFactory use of FileCleaningTracker is documented or coded wrong
 * [FILEUPLOAD-195] - Error reading the file size larger than 2 gb
 * [FILEUPLOAD-197] - ServletFileUpload isMultipartContent method does not support HTTP PUT
 * [FILEUPLOAD-199] - Uploads have unexpected results for files with non-ASCII names - support RFC2047
 * [FILEUPLOAD-204] - FileItem.getHeaders() returns always null.
 * [FILEUPLOAD-212] - Insecure request size checking
 * [FILEUPLOAD-214] - ServletFileUpload only accepts POST requests
 * [FILEUPLOAD-228] - (Servlet|Portlet)RequestContext#contentLength() must return request.getContentLength() if Content-length header is not available

Improvement
=============

 * [FILEUPLOAD-182] - Documentation: add simple HTML form example to fileupload user guide
 * [FILEUPLOAD-207] - enhance file read/write performance
 * [FILEUPLOAD-209] - Add Support for Generic Types
 * [FILEUPLOAD-223] - Update commons-io dependency to latest version that supports JDK1.5
 * [FILEUPLOAD-224] - Avoid string concatenations while parsing headers, use buffers instead
 * [FILEUPLOAD-225] - Replace java.rmi.server.UID() with java.util.UUID
 * [FILEUPLOAD-226] - DiskFileItem.counter could be converted to AtomicInteger (or AtomicLong?)
 * [FILEUPLOAD-227] - Private immutable fields which could be final

Task
=============

 * [FILEUPLOAD-201] - Update to JDK 1.5 and bump IO dependency to 2.0.1
 * [FILEUPLOAD-215] - version 1.2.3 improvement tasks

OTHER NOTES
============

 * This is the first version of Apache Commons FileUpload which requires Java5